tests/fail/match/inexhaustive.pion
//~ run = "${PION} elab ${FILE}"

fun (x : Bool) => match x {
    false => 1,
}
